fix: swiper adaptation

--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
 
                         <div class="swiper__author">
                             <picture class="swiper__picture">
-                                <source srcset="img/webp/discover-profile.webp"
+                                <source srcset="img/webp/swiper-first.webp"
                                         type="image/webp">
                                 <img class="swiper__picture-img"
-                                     src="img/png/discover-profile.png"
-                                     alt="discover-profile">
+                                     src="img/png/swiper-first.png"
+                                     alt="swiper-first">
                             </picture>
 
                             <span class="swiper__name">@jhonartist</span>
@@ -412,15 +412,15 @@
             <div class="slide__card card">
                 <div class="slide__section">
                     <div class="slide__profile">
-                        <span class="swiper__profile-title">Apollo Eth #1289 NFT</span>
+                        <span class="swiper__profile-title">Sassy Bull #1169 Art</span>
 
                         <div class="swiper__author">
                             <picture class="swiper__picture">
-                                <source srcset="img/webp/discover-profile.webp"
+                                <source srcset="img/webp/swiper-second.webp"
                                         type="image/webp">
                                 <img class="swiper__picture-img"
-                                     src="img/png/discover-profile.png"
-                                     alt="discover-profile">
+                                     src="img/png/swiper-second.png"
+                                     alt="swiper-second">
                             </picture>
 
                             <span class="swiper__name">@jhonartist</span>
@@ -454,17 +454,17 @@
 
                         <div class="swiper__timer-container">
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">18</span>
+                                <span class="swiper__timer-value">09</span>
                                 <span class="swiper__timer-sub">Hours</span>
                             </div>
 
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">25</span>
+                                <span class="swiper__timer-value">15</span>
                                 <span class="swiper__timer-sub">Mins</span>
                             </div>
 
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">44</span>
+                                <span class="swiper__timer-value">23</span>
                                 <span class="swiper__timer-sub">Secs</span>
                             </div>
                         </div>
@@ -493,15 +493,15 @@
             <div class="slide__card card">
                 <div class="slide__section">
                     <div class="slide__profile">
-                        <span class="swiper__profile-title">Apollo Eth #1289 NFT</span>
+                        <span class="swiper__profile-title">Satisfying 3D Art</span>
 
                         <div class="swiper__author">
                             <picture class="swiper__picture">
-                                <source srcset="img/webp/discover-profile.webp"
+                                <source srcset="img/webp/swiper-third.webp"
                                         type="image/webp">
                                 <img class="swiper__picture-img"
-                                     src="img/png/discover-profile.png"
-                                     alt="discover-profile">
+                                     src="img/png/swiper-third.png"
+                                     alt="swiper-third">
                             </picture>
 
                             <span class="swiper__name">@jhonartist</span>
@@ -535,17 +535,17 @@
 
                         <div class="swiper__timer-container">
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">18</span>
+                                <span class="swiper__timer-value">23</span>
                                 <span class="swiper__timer-sub">Hours</span>
                             </div>
 
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">25</span>
+                                <span class="swiper__timer-value">32</span>
                                 <span class="swiper__timer-sub">Mins</span>
                             </div>
 
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">44</span>
+                                <span class="swiper__timer-value">56</span>
                                 <span class="swiper__timer-sub">Secs</span>
                             </div>
                         </div>
@@ -578,11 +578,11 @@
 
                         <div class="swiper__author">
                             <picture class="swiper__picture">
-                                <source srcset="img/webp/discover-profile.webp"
+                                <source srcset="img/webp/swiper-first.webp"
                                         type="image/webp">
                                 <img class="swiper__picture-img"
-                                     src="img/png/discover-profile.png"
-                                     alt="discover-profile">
+                                     src="img/png/swiper-first.png"
+                                     alt="swiper-first">
                             </picture>
 
                             <span class="swiper__name">@jhonartist</span>
@@ -655,15 +655,15 @@
             <div class="slide__card card">
                 <div class="slide__section">
                     <div class="slide__profile">
-                        <span class="swiper__profile-title">Apollo Eth #1289 NFT</span>
+                        <span class="swiper__profile-title">Sassy Bull #1169 Art</span>
 
                         <div class="swiper__author">
                             <picture class="swiper__picture">
-                                <source srcset="img/webp/discover-profile.webp"
+                                <source srcset="img/webp/swiper-second.webp"
                                         type="image/webp">
                                 <img class="swiper__picture-img"
-                                     src="img/png/discover-profile.png"
-                                     alt="discover-profile">
+                                     src="img/png/swiper-second.png"
+                                     alt="swiper-second">
                             </picture>
 
                             <span class="swiper__name">@jhonartist</span>
@@ -697,17 +697,17 @@
 
                         <div class="swiper__timer-container">
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">18</span>
+                                <span class="swiper__timer-value">09</span>
                                 <span class="swiper__timer-sub">Hours</span>
                             </div>
 
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">25</span>
+                                <span class="swiper__timer-value">15</span>
                                 <span class="swiper__timer-sub">Mins</span>
                             </div>
 
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">44</span>
+                                <span class="swiper__timer-value">23</span>
                                 <span class="swiper__timer-sub">Secs</span>
                             </div>
                         </div>
@@ -736,15 +736,15 @@
             <div class="slide__card card">
                 <div class="slide__section">
                     <div class="slide__profile">
-                        <span class="swiper__profile-title">Apollo Eth #1289 NFT</span>
+                        <span class="swiper__profile-title">Satisfying 3D Art</span>
 
                         <div class="swiper__author">
                             <picture class="swiper__picture">
-                                <source srcset="img/webp/discover-profile.webp"
+                                <source srcset="img/webp/swiper-third.webp"
                                         type="image/webp">
                                 <img class="swiper__picture-img"
-                                     src="img/png/discover-profile.png"
-                                     alt="discover-profile">
+                                     src="img/png/swiper-third.png"
+                                     alt="swiper-third">
                             </picture>
 
                             <span class="swiper__name">@jhonartist</span>
@@ -778,17 +778,17 @@
 
                         <div class="swiper__timer-container">
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">18</span>
+                                <span class="swiper__timer-value">23</span>
                                 <span class="swiper__timer-sub">Hours</span>
                             </div>
 
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">25</span>
+                                <span class="swiper__timer-value">32</span>
                                 <span class="swiper__timer-sub">Mins</span>
                             </div>
 
                             <div class="swiper__timer-item">
-                                <span class="swiper__timer-value">44</span>
+                                <span class="swiper__timer-value">56</span>
                                 <span class="swiper__timer-sub">Secs</span>
                             </div>
                         </div>
@@ -806,6 +806,12 @@
             </div>
         </div>
     </div>
+</section>
+
+<!--tabs-->
+
+<section class="tabs">
+    <div></div>
 </section>
 
 <script src="js/form.js"></script>
