--- a/index.html
+++ b/index.html
@@ -1871,7 +1871,45 @@
             </svg>
         </button>
     </div>
+    <div class="sellers__button-container button-container">
+        <button class="sellers__button button">
+            <span class="sellers__button-text">Explore all</span>
+        </button>
+    </div>
 
+</section>
+
+<section class="info">
+    <picture class="info__bg">
+        <source srcset="img/webp/info-bg.webp"
+                type="image/webp">
+
+        <img class="info__bg-img"
+             src="img/png/info-bg.png"
+             alt="info__bg-img">
+    </picture>]
+    <div class="info__wrapper">
+        <div class="info__container card">
+            <span class="info__title">What are NFT’s ?</span>
+            <span class="info__text">
+            Lorem ipsum dolor sit amet, consectetur <br>
+            adipiscing elit. Interdum quis amet, faucibus <br>
+            lorem. Lectus amet odio quis sed adipiscing <br>
+            adipiscing magna non. Nullam turpis faucibus <br>
+            ridiculus suscipit. Et blandit suspendisse <br>
+            curabitur eu congue dui ut. <br>
+        </span>
+            <div class="info__links">
+                <a class="info__main">Learn more</a>
+                <div class="info__sub-container">
+                    <svg class="info__ico">
+                        <use xlink:href="img/svg/sprite.svg#play"></use>
+                    </svg>
+                    <a class="info__sub">Watch video</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <div class="test"></div>
