--- a/index.html
+++ b/index.html
@@ -1879,6 +1879,8 @@
 
 </section>
 
+<!--info-->
+
 <section class="info">
     <picture class="info__bg">
         <source srcset="img/webp/info-bg.webp"
@@ -1911,6 +1913,40 @@
         </div>
     </div>
 </section>
+
+<!--form-->
+
+<section class="form">
+    <picture class="form__picture">
+        <source srcset="img/webp/form.webp"
+                type="image/webp"
+                media="(min-width: 1024px)">
+        <source srcset="img/webp/form-mobile.webp"
+                type="image/webp"
+                media="(max-width: 1023px)">
+
+        <img class="form__picture-img"
+             src="img/png/form.png"
+             alt="form">
+    </picture>
+
+    <div class="form__wrapper">
+        <span class="form__title">Subscribe to us</span>
+        <span class="form__sub">
+            Specially developed to help restore a more youthful <br>
+            appearance with improved radiance and bounce.
+        </span>
+        <form class="form__container">
+            <input class="form__form" type="email" name="email" autocomplete="email" placeholder="Your work email address">
+            <div class="form__button-container button-container">
+                <button class="form__button button">
+                    <span class="form__button-text">Subscribe</span>
+                </button>
+            </div>
+        </form>
+    </div>
+</section>
+
 
 <div class="test"></div>
 
