--- a/index.html
+++ b/index.html
@@ -1210,6 +1210,7 @@
             </span>
         </div>
     </div>
+
     <div class="swiper swiper-sellers">
         <div class="swiper-wrapper grid-container wrapper__sellers">
             <div class="swiper-slide slide__sellers">
@@ -1239,6 +1240,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1266,6 +1268,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1293,6 +1296,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1320,6 +1324,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1347,6 +1352,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1374,6 +1380,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1401,6 +1408,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1428,6 +1436,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1455,6 +1464,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1482,6 +1492,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1509,6 +1520,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1536,6 +1548,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1563,6 +1576,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1590,6 +1604,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1617,6 +1632,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1644,6 +1660,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1671,6 +1688,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1698,6 +1716,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1725,6 +1744,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1752,6 +1772,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1779,6 +1800,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1806,6 +1828,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1833,6 +1856,7 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
@@ -1862,6 +1886,7 @@
             </div>
         </div>
     </div>
+
     <div class="swiper__button-container">
         <button class="swiper__button button_transparent">
             <span class="swiper__button-text">Explore</span>
@@ -1871,6 +1896,7 @@
             </svg>
         </button>
     </div>
+
     <div class="sellers__button-container button-container">
         <button class="sellers__button button">
             <span class="sellers__button-text">Explore all</span>
@@ -1889,7 +1915,8 @@
         <img class="info__bg-img"
              src="img/png/info-bg.png"
              alt="info__bg-img">
-    </picture>]
+    </picture>
+    ]
     <div class="info__wrapper">
         <div class="info__container card">
             <span class="info__title">What are NFT’s ?</span>
@@ -1900,13 +1927,15 @@
             adipiscing magna non. Nullam turpis faucibus <br>
             ridiculus suscipit. Et blandit suspendisse <br>
             curabitur eu congue dui ut. <br>
-        </span>
+            </span>
             <div class="info__links">
                 <a class="info__main">Learn more</a>
+
                 <div class="info__sub-container">
                     <svg class="info__ico">
                         <use xlink:href="img/svg/sprite.svg#play"></use>
                     </svg>
+
                     <a class="info__sub">Watch video</a>
                 </div>
             </div>
@@ -1932,12 +1961,16 @@
 
     <div class="form__wrapper">
         <span class="form__title">Subscribe to us</span>
+
         <span class="form__sub">
             Specially developed to help restore a more youthful <br>
             appearance with improved radiance and bounce.
         </span>
+
         <form class="form__container">
-            <input class="form__form" type="email" name="email" autocomplete="email" placeholder="Your work email address">
+            <input class="form__form" type="email" name="email" autocomplete="email"
+                   placeholder="Your work email address">
+
             <div class="form__button-container button-container">
                 <button class="form__button button">
                     <span class="form__button-text">Subscribe</span>
@@ -1947,8 +1980,138 @@
     </div>
 </section>
 
+<!--footer-->
 
-<div class="test"></div>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer__title-wrapper">
+            <svg class="footer__title-logo">
+                <use xlink:href="img/svg/sprite.svg#header-logo"></use>
+            </svg>
+
+            <span class="footer__title">
+                Lorem ipsum dolor amet, consectetur<br>
+                adipiscing elit. Eget nisl nunc quam ac<br>
+                sed turpis volutpat. Cursus sed<br>
+                massa non nisi, placerat.
+            </span>
+
+            <div class="footer__title-links">
+                <svg class="footer__links-item">
+                    <use xlink:href="img/svg/sprite.svg#instagram"></use>
+                </svg>
+
+                <svg class="footer__links-item">
+                    <use xlink:href="img/svg/sprite.svg#dribbble"></use>
+                </svg>
+
+                <svg class="footer__links-item">
+                    <use xlink:href="img/svg/sprite.svg#twitter"></use>
+                </svg>
+
+                <svg class="footer__links-item">
+                    <use xlink:href="img/svg/sprite.svg#youtube"></use>
+                </svg>
+            </div>
+        </div>
+
+        <div class="footer__menu">
+            <div class="menu__section">
+                <span class="menu__title">Market place</span>
+
+                <div class="menu__item-container">
+                    <a class="menu__item">Overview</a>
+
+                    <a class="menu__item menu__item--label">
+                        Features
+                    </a>
+
+                    <a class="menu__item ">Tutorials</a>
+
+                    <a class="menu__item">Pricing</a>
+
+                    <a class="menu__item">Releases</a>
+                </div>
+            </div>
+
+            <div class="menu__section">
+                <span class="menu__title">Collectibles</span>
+
+                <div class="menu__item-container">
+                    <a class="menu__item">About</a>
+
+                    <a class="menu__item">Press</a>
+
+                    <a class="menu__item">Careers</a>
+
+                    <a class="menu__item">Contact</a>
+
+                    <a class="menu__item">Partners</a>
+                </div>
+            </div>
+
+            <div class="menu__section">
+                <span class="menu__title">Support</span>
+
+                <div class="menu__item-container">
+                    <a class="menu__item">Help Center</a>
+
+                    <a class="menu__item">Safety Center</a>
+
+                    <a class="menu__item">Legal</a>
+
+                    <a class="menu__item">Privacy policy</a>
+
+                    <a class="menu__item">Status</a>
+                </div>
+            </div>
+
+            <div class="menu__section">
+                <span class="menu__title">Legal</span>
+
+                <div class="menu__item-container">
+                    <a class="menu__item">Cookies Policy</a>
+
+                    <a class="menu__item">Privacy Policy</a>
+
+                    <a class="menu__item">Terms of Service</a>
+
+                    <a class="menu__item">Law Enforcement</a>
+
+                    <a class="menu__item">Status</a>
+                </div>
+            </div>
+
+            <div class="menu__section">
+                <span class="menu__title">Follow us</span>
+
+                <div class="menu__item-container">
+                    <a class="menu__item">Facebook</a>
+
+                    <a class="menu__item">Twitter</a>
+
+                    <a class="menu__item">Dribble</a>
+
+                    <a class="menu__item">Instagram</a>
+
+                    <a class="menu__item">LinkedIn</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-sub">
+        <span class="footer__sub-title">© 2020 Landify UI Kit. All rights reserved</span>
+
+        <div class="footer__sub-menu">
+            <a class="sub-menu__item">Terms & Conditions</a>
+
+            <a class="sub-menu__item">Privacy Policy</a>
+
+            <a class="sub-menu__item">Sitemap</a>
+        </div>
+    </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="js/form.js"></script>
