feat: footer accordion

--- a/index.html
+++ b/index.html
@@ -2017,10 +2017,17 @@
 
         <div class="footer__menu">
             <div class="menu__section">
-                <span class="menu__title">Market place</span>
+                <div class="menu__title-container accordion">
+                    <a class="menu__title">Market place</a>
+
+                    <svg class="accordion-ico">
+                        <use xlink:href="img/svg/sprite.svg#accordion"></use>
+                    </svg>
+                </div>
+
 
                 <div class="menu__item-container">
-                    <a class="menu__item">Overview</a>
+                    <a class="menu__item" href="#">Overview</a>
 
                     <a class="menu__item menu__item--label">
                         Features
@@ -2035,7 +2042,13 @@
             </div>
 
             <div class="menu__section">
-                <span class="menu__title">Collectibles</span>
+                <div class="menu__title-container accordion">
+                    <a class="menu__title">Collectibles</a>
+
+                    <svg class="accordion-ico">
+                        <use xlink:href="img/svg/sprite.svg#accordion"></use>
+                    </svg>
+                </div>
 
                 <div class="menu__item-container">
                     <a class="menu__item">About</a>
@@ -2051,7 +2064,13 @@
             </div>
 
             <div class="menu__section">
-                <span class="menu__title">Support</span>
+                <div class="menu__title-container accordion">
+                    <a class="menu__title">Support</a>
+
+                    <svg class="accordion-ico">
+                        <use xlink:href="img/svg/sprite.svg#accordion"></use>
+                    </svg>
+                </div>
 
                 <div class="menu__item-container">
                     <a class="menu__item">Help Center</a>
@@ -2067,7 +2086,13 @@
             </div>
 
             <div class="menu__section">
-                <span class="menu__title">Legal</span>
+                <div class="menu__title-container accordion">
+                    <a class="menu__title">Legal</a>
+
+                    <svg class="accordion-ico">
+                        <use xlink:href="img/svg/sprite.svg#accordion"></use>
+                    </svg>
+                </div>
 
                 <div class="menu__item-container">
                     <a class="menu__item">Cookies Policy</a>
@@ -2083,7 +2108,13 @@
             </div>
 
             <div class="menu__section">
-                <span class="menu__title">Follow us</span>
+                <div class="menu__title-container accordion">
+                    <a class="menu__title">Follow us</a>
+
+                    <svg class="accordion-ico">
+                        <use xlink:href="img/svg/sprite.svg#accordion"></use>
+                    </svg>
+                </div>
 
                 <div class="menu__item-container">
                     <a class="menu__item">Facebook</a>
