fix: global adaptive clamp ( first )

--- a/index.html
+++ b/index.html
@@ -102,16 +102,17 @@
 <section class="discover">
     <div class="discover__title">
             <span class="discover__title-main">
-                Discover, collect, and<br>
-                sell
+                Discover, <br class="br-mobile"> collect, and<br class="br-desktop">
+                sell  <br class="br-mobile">
 
                 <span class="discover__title-main discover__title-main--gradient">
-                    Timeless NFTs
+                    Timeless
                 </span>
+                NFTs
             </span>
 
         <span class="discover__title-sub">
-                The world’s first and largest digital marketplace for crypto <br>
+                The world’s first and largest digital marketplace for crypto <br class="br-desktop">
                 collectibles and non-fungible tokens (NFTs)
         </span>
 
@@ -747,15 +748,16 @@
             </div>
         </div>
     </div>
-    <div class="swiper__button-container">
-        <button class="swiper__button button_transparent">
-            <span class="swiper__button-text">Explore</span>
+    <div class="container__button-mobile">
+        <button class="button-mobile">
+            <span class="button-mobile-text">Explore</span>
 
-            <svg class="swiper__title-ico">
+            <svg class="button-mobile-ico">
                 <use xlink:href="img/svg/sprite.svg#arrow"></use>
             </svg>
         </button>
     </div>
+
 </section>
 
 <!--tabs-->
@@ -1212,7 +1214,7 @@
     </div>
 
     <div class="swiper swiper-sellers">
-        <div class="swiper-wrapper grid-container wrapper__sellers">
+        <div class="swiper-wrapper wrapper__sellers">
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
                 <picture class="sellers__picture">
