fix: global adaptive clamp ( second )

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
             </div>
         </div>
     </div>
+
     <div class="discover__logos">
         <svg class="logos__item logos__item--binance">
             <use xlink:href="img/svg/sprite.svg#binance"></use>
@@ -1172,11 +1173,11 @@
             </div>
         </div>
     </div>
-    <div class="swiper__button-container">
-        <button class="swiper__button button_transparent">
-            <span class="swiper__button-text">Explore</span>
+    <div class="container__button-mobile">
+        <button class="button-mobile">
+            <span class="button-mobile-text">Explore</span>
 
-            <svg class="swiper__title-ico">
+            <svg class="button-mobile-ico">
                 <use xlink:href="img/svg/sprite.svg#arrow"></use>
             </svg>
         </button>
@@ -1207,8 +1208,9 @@
 
         <div class="sellers__title-sup">
             <span class="sellers__title-sup-text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do<br>
-                amet sint. Velit officia consequat duis enim minim mollit.
+                Amet minim mollit non deserunt ullamco est sit <br class="br-mobile"> aliqua dolor do<br
+                    class="br-desktop">
+                amet sint. Velit officia consequat <br class="br-mobile"> duis enim minim mollit.
             </span>
         </div>
     </div>
@@ -1233,7 +1235,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1261,7 +1263,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1289,7 +1291,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1317,7 +1319,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1345,7 +1347,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1373,7 +1375,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1401,7 +1403,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1429,7 +1431,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1457,7 +1459,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1485,7 +1487,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1513,7 +1515,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1541,7 +1543,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1569,7 +1571,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1597,7 +1599,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1625,7 +1627,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1653,7 +1655,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1681,7 +1683,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1709,7 +1711,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1737,7 +1739,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1765,7 +1767,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1793,7 +1795,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1821,7 +1823,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1849,7 +1851,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1877,7 +1879,7 @@
                             <use xlink:href="img/svg/sprite.svg#logo-white"></use>
                         </svg>
 
-                        <span class="seller__value">74875</span>
+                        <span class="sellers_value">74875</span>
                     </div>
                 </div>
 
@@ -1886,14 +1888,15 @@
                     <span class="sellers__percent">+468.48%</span>
                 </div>
             </div>
+
         </div>
     </div>
 
-    <div class="swiper__button-container">
-        <button class="swiper__button button_transparent">
-            <span class="swiper__button-text">Explore</span>
+    <div class="container__button-mobile">
+        <button class="button-mobile">
+            <span class="button-mobile-text">Explore</span>
 
-            <svg class="swiper__title-ico">
+            <svg class="button-mobile-ico">
                 <use xlink:href="img/svg/sprite.svg#arrow"></use>
             </svg>
         </button>
@@ -1918,7 +1921,7 @@
              src="img/png/info-bg.png"
              alt="info__bg-img">
     </picture>
-    ]
+
     <div class="info__wrapper">
         <div class="info__container card">
             <span class="info__title">What are NFT’s ?</span>
@@ -1992,9 +1995,9 @@
             </svg>
 
             <span class="footer__title">
-                Lorem ipsum dolor amet, consectetur<br>
-                adipiscing elit. Eget nisl nunc quam ac<br>
-                sed turpis volutpat. Cursus sed<br>
+                Lorem ipsum dolor amet, consectetur<br class="br-desktop">
+                adipiscing elit. Eget nisl nunc quam ac<br class="br-desktop">
+                sed turpis volutpat. Cursus sed<br class="br-desktop">
                 massa non nisi, placerat.
             </span>
 
