fix:minor adaptive bugs

--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
 <!--swiper authors-->
 
 <section class="authors">
-    <div class="title section__title">
+    <div class="section__title">
         <span class="main">Explore Collections</span>
 
         <div class="container">
@@ -2063,9 +2063,9 @@
             <input class="input" type="email" name="email" autocomplete="email"
                    placeholder="Your work email address">
 
-            <div class="button button-container-preset">
+            <div class="button-container button-container-preset">
                 <button class="button button-preset">
-                    <span class="button-text-preset">Subscribe</span>
+                    <span class="button-text button-text-preset">Subscribe</span>
                 </button>
             </div>
         </form>
