--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             <div class="item">
                 <span class="value">18m+</span>
                 <span class="label">Auctions</span>
+
             </div>
 
             <div class="item">
@@ -165,7 +166,7 @@
 
 
         <div class="wrapper">
-            <div class="content card">
+            <div class="content">
                 <div class="section">
                     <div class="author">
                         <span class="title">3D Abstract Hand</span>
@@ -2769,7 +2770,7 @@
         <span class="title">Subscribe to us</span>
 
         <span class="sup">
-            Specially developed to help restore a more youthful <br>
+            Specially developed to help restore a more youthful <br class="br-desktop">
             appearance with improved radiance and bounce.
         </span>
 
